# revdump

./: .gitignore  Cargo.toml  README.md
ida-plugin/: CMakeLists.txt  Makefile  revdump_ida_plugin.cpp
src/: console.rs  devirt.rs  dumper.rs  error.rs  fixup.rs  lib.rs  main.rs  memory.rs  pe.rs  progress.rs  scanner.rs  stub.rs
test/: Makefile  test_vtable.cpp
tests/: integration_test.rs
