[package]
name = "revdump"
version = "0.1.0"
edition = "2021"
authors = ["revdump contributors"]
description = "PE process dumper with vcall resolution via synthetic vtable stubs"
license = "MIT"
repository = "https://github.com/revdump/revdump-rs"
keywords = ["pe", "windows", "reverse-engineering", "vtable", "dumper"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "revdump"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "revdump"
path = "src/main.rs"

[dependencies]
# Windows API bindings
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory-mapped files
memmap2 = "0.9"

# Parallel processing
rayon = "1.10"

# Formatting / display
bytesize = "1.3"
indicatif = { version = "0.17", features = ["rayon"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
# SIMD abstractions (optional, we'll use std::arch primarily)

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 4

[features]
default = []
simd = []  # Enable explicit SIMD paths (auto-detected at runtime)
